arch/powerpc: Add udbg earlyboot console

--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -6,3 +6,6 @@ CONFIG_WIIU=y
 # CONFIG_PPC_CHRP is not set
 # CONFIG_PPC_PMAC is not set
 # CONFIG_PPC_OF_BOOT_TRAMPOLINE is not set
+
+CONFIG_PPC_EARLY_DEBUG=y
+CONFIG_PPC_EARLY_DEBUG_LATTEIPC=y
