--- a/arch/powerpc/platforms/wiiu/Makefile
+++ b/arch/powerpc/platforms/wiiu/Makefile
@@ -1,3 +1,4 @@
 # SPDX-License-Identifier: GPL-2.0
 
 #obj-$(CONFIG_WIIU) += wiiu.o
+obj-$(CONFIG_PPC_EARLY_DEBUG_LATTEIPC) += drivers/udbg_latteipc.o
