video/fbdev: Add existing wiiu fbdev driver (+caching issues?)

--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -1,6 +1,7 @@
 # linux-wiiu kernel defconfig
 
 CONFIG_LOCALVERSION="-wiiu"
+CONFIG_LOGO=y
 
 CONFIG_WIIU=y
 # CONFIG_PPC_CHRP is not set
@@ -9,3 +10,10 @@ CONFIG_WIIU=y
 
 CONFIG_PPC_EARLY_DEBUG=y
 CONFIG_PPC_EARLY_DEBUG_LATTEIPC=y
+
+# CONFIG_VGA_ARB is not set
+CONFIG_FB=y
+CONFIG_FB_WIIU=y
+
+# CONFIG_VGA_CONSOLE is not set
+CONFIG_FRAMEBUFFER_CONSOLE=y
