--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -9,7 +9,19 @@
 
     memory {
         device_type = "memory";
-        reg = <0x00000000 0x02000000>;          /* MEM1 - 32MB */
+        reg = <0x00000000 0x02000000        /* MEM1 - 32MB */
+               0x10000000 0x80000000>;      /* MEM2 - 2GB  */
+    };
+
+    reserved-memory {
+        #address-cells = <1>;
+        #size-cells = <1>;
+        ranges;
+
+        udbg_reserved: udbg@178C0000 {
+            reg = <0x178C0000 0x1C0000>;
+            no-map;
+        };
     };
 
     cpus {
@@ -28,6 +40,18 @@
             d-cache-line-size = <32>;
             i-cache-size = <32768>;             /* very wrong */
             d-cache-size = <32768>;             /* very wrong */
+        };
+    };
+
+    latte {
+        #address-cells = <1>;
+        #size-cells = <1>;
+        compatible = "nintendo,latte";
+        ranges = <0x0c000000 0x0c000000 0x00400000>; /* Espresso registers */
+
+        gx2: gx2@0c200000 {
+            compatible = "nintendo,wiiufb";
+            reg = <0x0c200000 0x10000>;
         };
     };
 };
