--- a/drivers/video/fbdev/Kconfig
+++ b/drivers/video/fbdev/Kconfig
@@ -2072,6 +2072,15 @@ config FB_XILINX
 	  framebuffer. ML300 carries a 640*480 LCD display on the board,
 	  ML403 uses a standard DB15 VGA connector.
 
+config FB_WIIU
+	tristate "Wii U gx2 framebuffer support"
+	depends on FB && WIIU
+	select FB_CFB_FILLRECT
+	select FB_CFB_COPYAREA
+	select FB_CFB_IMAGEBLIT
+	---help---
+	  pah help
+
 config FB_GOLDFISH
 	tristate "Goldfish Framebuffer"
 	depends on FB && HAS_DMA && (GOLDFISH || COMPILE_TEST)
