--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -47,11 +47,30 @@
         #address-cells = <1>;
         #size-cells = <1>;
         compatible = "nintendo,latte";
-        ranges = <0x0c000000 0x0c000000 0x00400000>; /* Espresso registers */
+        ranges = <0x0c000000 0x0c000000 0x00400000      /* Espresso registers */
+                  0x0d800000 0x0d800000 0x00800000>;    /* Latte registers */
+
+        espresso_pic: pic@0c000000 {
+            #interrupt-cells = <1>;
+            interrupt-controller;
+
+            compatible = "nintendo,espresso-pic";
+            reg = <0x0c000000 0x8c>;
+        };
 
         gx2: gx2@0c200000 {
             compatible = "nintendo,wiiufb";
             reg = <0x0c200000 0x10000>;
+        };
+
+        latte_ahball_pic: pic@0d800440 {
+            #interrupt-cells = <1>;
+            interrupt-controller;
+
+            compatible = "nintendo,latte-ahball-pic";
+            reg = <0x0d800440 0x10>;
+            interrupt-parent = <&espresso_pic>;
+            interrupts = <24>;
         };
     };
 };
