--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -91,6 +91,15 @@
             big-endian-regs;
         };
 
+        ohci_0_0: usb@0d050000 {
+            compatible = "nintendo,ohci-wiiu";
+            reg = <0x0d050000 0x100>;
+            interrupts = <5>;
+            interrupt-parent = <&latte_ahball_pic>;
+
+            big-endian;
+        };
+
         latte_ahball_pic: pic@0d800440 {
             #interrupt-cells = <1>;
             interrupt-controller;
