usb/host/ohci-wiiu: Add control quirk (from Wii, unsure if needed)

--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -97,7 +97,7 @@
             interrupts = <5>;
             interrupt-parent = <&latte_ahball_pic>;
 
-            big-endian;
+            big-endian-regs;
         };
 
         latte_ahball_pic: pic@0d800440 {
