--- a/arch/powerpc/platforms/wiiu/Kconfig
+++ b/arch/powerpc/platforms/wiiu/Kconfig
@@ -9,4 +9,4 @@ config WIIU
 	select USB_ARCH_HAS_EHCI if USB_SUPPORT
 	select USB_EHCI_BIG_ENDIAN_MMIO if USB_SUPPORT
 	select USB_OHCI_BIG_ENDIAN_MMIO if USB_SUPPORT
-	select USB_OHCI_BIG_ENDIAN_DESC if USB_SUPPORT
+#	select USB_OHCI_BIG_ENDIAN_DESC if USB_SUPPORT
