--- a/arch/powerpc/platforms/wiiu/Makefile
+++ b/arch/powerpc/platforms/wiiu/Makefile
@@ -1,4 +1,5 @@
 # SPDX-License-Identifier: GPL-2.0
 
-obj-$(CONFIG_WIIU) += wiiu.o drivers/latte-ahball-pic.o drivers/espresso-pic.o
+obj-$(CONFIG_WIIU) += setup.o power.o drivers/latte-ahball-pic.o drivers/espresso-pic.o
 obj-$(CONFIG_PPC_EARLY_DEBUG_LATTEIPC) += drivers/udbg_latteipc.o
+
