powerpc/mm: Support discontiguous memblocks for CONFIG_WIIU
I'm honestly suprised this just worked. Changes to defconfig needed
because the default lowmem size is 768MiB, and the vmem layout reflects
that. We have a tad more RAM on Wii U.

--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -12,6 +12,14 @@ CONFIG_WIIU=y
 CONFIG_PPC_EARLY_DEBUG=y
 CONFIG_PPC_EARLY_DEBUG_LATTEIPC=y
 
+CONFIG_ADVANCED_OPTIONS=y
+CONFIG_LOWMEM_SIZE_BOOL=y
+CONFIG_LOWMEM_SIZE=0x90000000
+CONFIG_PAGE_OFFSET_BOOL=y
+CONFIG_PAGE_OFFSET=0x60000000
+CONFIG_TASK_SIZE_BOOL=y
+CONFIG_TASK_SIZE=0x60000000
+
 # CONFIG_VGA_ARB is not set
 CONFIG_FB=y
 CONFIG_FB_WIIU=y
