powerpc/wiiu: Add GPIO

--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -17,6 +17,12 @@ CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
+CONFIG_INPUT_EVDEV=y
+CONFIG_KEYBOARD_GPIO=y
+CONFIG_KEYBOARD_GPIO_POLLED=y
+CONFIG_GPIOLIB=y
+CONFIG_GPIO_SYSFS=y
+CONFIG_GPIO_HLWD=y
 CONFIG_FB=y
 CONFIG_FB_WIIU=y
 # CONFIG_VGA_CONSOLE is not set
