hid: Add a driver for the GamePad (libdrc's work), because, why not

--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -989,6 +989,13 @@ config HID_WACOM
 	  To compile this driver as a module, choose M here: the
 	  module will be called wacom.
 
+config HID_WIIUDRC
+	tristate "Nintendo Wii U GamePad over internal DRH"
+	depends on HID
+	---help---
+	Support for the Wii U GamePad, when connected with the Wii U's internal DRH
+	chip. This driver provides touch and button inputs.
+
 config HID_WIIMOTE
 	tristate "Nintendo Wii / Wii U peripherals"
 	depends on HID
