--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -100,6 +100,9 @@ CONFIG_SND_ALOOP=y
 # CONFIG_SND_USB is not set
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
+CONFIG_HID_SONY=y
+CONFIG_HID_WIIUDRC=y
+CONFIG_HID_WIIMOTE=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_OHCI_HCD=y
 CONFIG_USB_ACM=y
