--- a/arch/powerpc/platforms/wiiu/Kconfig
+++ b/arch/powerpc/platforms/wiiu/Kconfig
@@ -2,6 +2,7 @@
 config WIIU
 	bool "Nintendo Wii U"
 	depends on 6xx
+	select HAVE_GENERIC_DMA_COHERENT
 	#PICs
 	select IRQ_DOMAIN_HIERARCHY
 	#USBs
