--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -71,6 +71,7 @@ CONFIG_RT2800USB=y
 # CONFIG_WLAN_VENDOR_ZYDAS is not set
 # CONFIG_WLAN_VENDOR_QUANTENNA is not set
 CONFIG_USB_NET_RNDIS_WLAN=y
+CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
