wiiufb: Tweaks for deferred fbcon

--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -10,7 +10,7 @@
     #size-cells = <1>;
 
     chosen {
-        bootargs = "root=/dev/mmcblk0p2 rootwait";
+        bootargs = "root=/dev/mmcblk0p2 rootwait quiet";
     };
 
     memory {
