--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -92,6 +92,7 @@ CONFIG_FB=y
 CONFIG_FB_WIIU=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE=y
+CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
 CONFIG_LOGO=y
 CONFIG_SOUND=y
 CONFIG_SND=y
