--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -99,7 +99,7 @@ CONFIG_SND=y
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_ALOOP=y
 # CONFIG_SND_PPC is not set
-# CONFIG_SND_USB is not set
+CONFIG_SND_USB_AUDIO=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
 CONFIG_HID_SONY=y
