--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -28,7 +28,15 @@
             compatible = "shared-dma-pool";
             no-map;
 
-            reg = <0x01C00000 0x00400000>;
+            reg = <0x01C00000 0x00400000>; /* 8 MiB */
+        };
+
+        /*Ranges aped from wii-linux-ngx*/
+        usb_dma: buffer@0x13000000 {
+            compatible = "shared-dma-pool";
+            no-map;
+
+            reg = <0x13000000 0x00400000>; /* 8 MiB (512K*7 HCDs+512K spare) */
         };
     };
 
@@ -164,6 +172,7 @@
             interrupts = <4>;
             interrupt-parent = <&latte_ahball_pic>;
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         ohci_0_0: usb@0d050000 {
@@ -173,6 +182,7 @@
             interrupt-parent = <&latte_ahball_pic>;
 
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         ohci_0_1: usb@0d060000 {
@@ -182,6 +192,7 @@
             interrupt-parent = <&latte_ahball_pic>;
 
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         ehci_1: usb@0d120000 {
@@ -190,6 +201,7 @@
             interrupts = <16>;
             interrupt-parent = <&latte_ahball_pic>;
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         ohci_1_0: usb@0d130000 {
@@ -199,6 +211,7 @@
             interrupt-parent = <&latte_ahball_pic>;
 
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         ehci_2: usb@0d140000 {
@@ -207,6 +220,7 @@
             interrupts = <36>;
             interrupt-parent = <&latte_ahball_pic>;
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         ohci_2_0: usb@0d150000 {
@@ -216,6 +230,7 @@
             interrupt-parent = <&latte_ahball_pic>;
 
             big-endian-regs;
+            memory-region = <&usb_dma>;
         };
 
         latte_ipc: ipc@0d800000 {
