--- a/arch/powerpc/configs/wiiu_defconfig
+++ b/arch/powerpc/configs/wiiu_defconfig
@@ -28,6 +28,7 @@ CONFIG_BT_HCIBTUSB=y
 # CONFIG_BT_HCIBTUSB_RTL is not set
 CONFIG_CFG80211=y
 CONFIG_MAC80211=y
+CONFIG_MAC80211_LEDS=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_SCSI=y
@@ -45,15 +46,9 @@ CONFIG_USB_LAN78XX=y
 CONFIG_USB_NET_CDC_EEM=y
 CONFIG_USB_IPHETH=y
 # CONFIG_WLAN_VENDOR_ADMTEK is not set
-CONFIG_ATH9K=y
-CONFIG_CARL9170=y
+# CONFIG_WLAN_VENDOR_ATH is not set
 # CONFIG_WLAN_VENDOR_ATMEL is not set
-CONFIG_B43=y
-CONFIG_B43_BUSES_SSB=y
-CONFIG_B43_SDIO=y
-# CONFIG_B43_PHY_G is not set
-# CONFIG_B43_PHY_N is not set
-# CONFIG_B43_PHY_LP is not set
+# CONFIG_WLAN_VENDOR_BROADCOM is not set
 # CONFIG_WLAN_VENDOR_CISCO is not set
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
@@ -86,22 +81,13 @@ CONFIG_GPIOLIB=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_HLWD=y
 # CONFIG_HWMON is not set
-CONFIG_MEDIA_SUPPORT=y
-CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_USB_SUPPORT=y
-CONFIG_USB_VIDEO_CLASS=y
+CONFIG_SSB=y
+CONFIG_SSB_SDIOHOST=y
 CONFIG_FB=y
 CONFIG_FB_WIIU=y
 # CONFIG_VGA_CONSOLE is not set
 CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_FRAMEBUFFER_CONSOLE_DEFERRED_TAKEOVER=y
-CONFIG_LOGO=y
-CONFIG_SOUND=y
-CONFIG_SND=y
-CONFIG_SND_SEQUENCER=y
-CONFIG_SND_ALOOP=y
-# CONFIG_SND_PPC is not set
-CONFIG_SND_USB_AUDIO=y
 CONFIG_HID_BATTERY_STRENGTH=y
 CONFIG_HIDRAW=y
 CONFIG_HID_SONY=y
@@ -118,6 +104,8 @@ CONFIG_MMC=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_WIIU=y
+CONFIG_NEW_LEDS=y
+CONFIG_LEDS_CLASS=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_EXT4_FS=y
@@ -143,6 +131,7 @@ CONFIG_CIFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ISO8859_8=y
 CONFIG_NLS_ASCII=y
+CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_MAGIC_SYSRQ_SERIAL is not set
