--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 linux-build:
     stage: build
-    image: quarktheawesome/linux-wiiu-builder:v2
+    image: registry.gitlab.com/linux-wiiu/linux-wiiu-scripts/lw-ci:latest
     variables:
         GIT_DEPTH: 2
     script:
