--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ linux-deploy-debian:
         - chmod 700 ~/.ssh
         - ssh-keyscan -H 'gitlab.com' >> ~/.ssh/known_hosts
         - eval $(ssh-agent -s)
-        - echo "$BOT_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add
+        - echo "$BOT_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
         - git clone git@gitlab.com:linux-wiiu/debian-wiiu-repo
         - mv ./*.deb ./*.buildinfo debian-wiiu-repo/debs/
         - cd debian-wiiu-repo && git add debs/* && git commit -m "Add kernel r${PKG_REV} from ${CI_PROJECT_PATH}/${CI_COMMIT_SHA}" && git push
