--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ linux-build:
         GIT_DEPTH: 2
     script:
         - make wiiu_defconfig $LINUXMK
-        - make $LINUXMK
+        - make $LINUXMK -j`nproc`
         - cp arch/powerpc/boot/dtbImage.wiiu dtbImage.wiiu
     artifacts:
         paths:
@@ -22,7 +22,7 @@ linux-build-modular:
     script:
         - mkdir modules
         - make wiiu_slim_defconfig $LINUXMK
-        - make $LINUXMK
+        - make $LINUXMK -j`nproc`
         - make $LINUXMK modules_install INSTALL_MOD_PATH=modules
         - cp arch/powerpc/boot/dtbImage.wiiu dtbImage.wiiu
     artifacts:
@@ -32,43 +32,3 @@ linux-build-modular:
             - modules
         name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}"
         expire_in: 6 weeks
-
-linux-build-debian:
-    stage: build
-    image: registry.gitlab.com/linux-wiiu/linux-wiiu-scripts/lw-ci:latest
-    variables:
-        GIT_DEPTH: 2
-    script:
-        - export PKG_REV=1
-        - mkdir modules
-        - make wiiu_slim_defconfig $LINUXMK
-        - make $LINUXMK bindeb-pkg KBUILD_IMAGE=arch/powerpc/boot/dtbImage.wiiu DEBFULLNAME="Ash Logan" DEBEMAIL="ash@linux-wiiu.org" KDEB_CHANGELOG_DIST="unstable" KDEB_PKGVERSION=$PKG_REV
-        - mv ../*.deb ../*.buildinfo .
-    artifacts:
-        paths:
-            - ./*.deb
-            - ./*.buildinfo
-        name: "${CI_JOB_NAME}-${CI_COMMIT_REF_SLUG}"
-        expire_in: 6 weeks
-
-linux-deploy-debian:
-    stage: deploy
-    image: debian:buster-slim
-    variables:
-        GIT_DEPTH: 2
-        GIT_STRATEGY: none
-    needs:
-        - job: linux-build-debian
-          artifacts: true
-    script:
-        - apt update && apt -y install openssh-client git
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
-        - ssh-keyscan -H 'gitlab.com' >> ~/.ssh/known_hosts
-        - eval $(ssh-agent -s)
-        - echo "$BOT_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-        - git config --global user.email $BOT_EMAIL
-        - git config --global user.name $BOT_USERNAME
-        - git clone git@gitlab.com:linux-wiiu/debian-wiiu-repo
-        - mv ./*.deb ./*.buildinfo debian-wiiu-repo/debs/
-        - cd debian-wiiu-repo && git add debs/* && git commit -m "Add kernel r${PKG_REV} from ${CI_PROJECT_PATH}/${CI_COMMIT_SHA}" && git push
