nvmem: wiiu-otp: Add new driver for the Wii U OTP
This OTP is read-only and contains various keys used by the Wii U to
decrypt, encrypt or verify various pieces of storage.

Signed-off-by: Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>

--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -248,6 +248,11 @@
             interrupts = <24>;
         };
 
+        latte_otp: otp@0d800000 {
+            compatible = "nintendo,latte-otp";
+            reg = <0x0d8001ec 0x8>;
+        };
+
         /* this doesn't quite work yet, disabling for now
         sata: sata@0d160400 {
             compatible = "generic-ahci";
