--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -3,6 +3,8 @@ CONFIG_CGROUPS=y
 # CONFIG_PPC_CHRP is not set
 # CONFIG_PPC_PMAC is not set
 CONFIG_WIIU=y
+CONFIG_NVMEM=y
+CONFIG_WIIU_OTP=y
 # CONFIG_PPC_OF_BOOT_TRAMPOLINE is not set
 CONFIG_ADVANCED_OPTIONS=y
 CONFIG_LOWMEM_SIZE_BOOL=y
