--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -1,5 +1,6 @@
 CONFIG_LOCALVERSION="-wiiu"
 CONFIG_CGROUPS=y
+CONFIG_PERF_EVENTS=y
 # CONFIG_PPC_CHRP is not set
 # CONFIG_PPC_PMAC is not set
 CONFIG_WIIU=y
