Enable V4L2 modules in defconfig
This way we get /dev/video[0..3] devices for accessing the DRC camera.

--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -97,6 +97,11 @@ CONFIG_GPIO_HLWD=y
 # CONFIG_HWMON is not set
 CONFIG_SSB=m
 CONFIG_SSB_SDIOHOST=y
+CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_CAMERA_SUPPORT=y
+CONFIG_MEDIA_USB_SUPPORT=y
+CONFIG_USB_VIDEO_CLASS=y
+CONFIG_USB_GSPCA=n
 CONFIG_FB=y
 CONFIG_FB_WIIU=y
 # CONFIG_VGA_CONSOLE is not set
