--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -253,6 +253,11 @@
             reg = <0x0d8001ec 0x8>;
         };
 
+        latte_aes: aes@0d020000 {
+            compatible = "nintendo,latte-aes";
+            reg = <0x0d020000 0x14>;
+        };
+
         /* this doesn't quite work yet, disabling for now
         sata: sata@0d160400 {
             compatible = "generic-ahci";
