--- a/arch/powerpc/boot/dts/wiiu.dts
+++ b/arch/powerpc/boot/dts/wiiu.dts
@@ -258,14 +258,13 @@
             reg = <0x0d020000 0x14>;
         };
 
-        /* this doesn't quite work yet, disabling for now
         sata: sata@0d160400 {
-            compatible = "generic-ahci";
-            reg = <0x0d160400 0xfc00>;
+            compatible = "nintendo,latte-ahci";
+            reg = <0x0d160400 0x808>;
 
             interrupt-parent = <&latte_ahball_pic>;
-            interrupts = <7>;
-        };*/
+            interrupts = <38>; //IRQ 7 may be DBGINTs only
+        };
     };
 
     /* TODO make this gpio-keyed once hollywood-gpio supports interrupts */
