--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -209,3 +209,7 @@ CONFIG_CRC_ITU_T=y
 CONFIG_MAGIC_SYSRQ=y
 # CONFIG_MAGIC_SYSRQ_SERIAL is not set
 CONFIG_PPC_EARLY_DEBUG=y
+
+CONFIG_SPI=y
+CONFIG_SPI_GPIO=y
+CONFIG_EEPROM_93XX46=y
