--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -124,8 +124,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_WIIU=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_IOMMU_SUPPORT is not set
-CONFIG_NVMEM=y
-CONFIG_WIIU_OTP=y
+CONFIG_NVMEM_NINTENDO_OTP=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_AUTOFS_FS=m
