defconfig: Enable ATA, disable sr
Can be re-enabled when we figure out how to make it skip the Wii U drive

--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -35,11 +35,13 @@ CONFIG_CFG80211=m
 CONFIG_MAC80211=m
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
-CONFIG_SCSI=y
 CONFIG_EEPROM_93XX46=y
 CONFIG_BLK_DEV_SD=y
-CONFIG_BLK_DEV_SR=y
 CONFIG_CHR_DEV_SG=y
+CONFIG_ATA=y
+# CONFIG_SATA_PMP is not set
+CONFIG_AHCI_WIIU=m
+# CONFIG_ATA_SFF is not set
 CONFIG_NETDEVICES=y
 # CONFIG_ETHERNET is not set
 CONFIG_PHYLIB=y
