--- a/arch/powerpc/configs/wiiu_slim_defconfig
+++ b/arch/powerpc/configs/wiiu_slim_defconfig
@@ -131,6 +131,8 @@ CONFIG_MMC=y
 CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_OF_WIIU=y
+CONFIG_RTC_CLASS=y
+CONFIG_RTC_DRV_GAMECUBE=y
 # CONFIG_VIRTIO_MENU is not set
 # CONFIG_IOMMU_SUPPORT is not set
 CONFIG_NVMEM_NINTENDO_OTP=y
