--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -1160,7 +1160,7 @@ config RTC_DRV_V3020
 
 config RTC_DRV_GAMECUBE
 	tristate "Nintendo GameCube, Wii and Wii U RTC"
-	depends on GAMECUBE || WII || COMPILE_TEST
+	depends on GAMECUBE || WII || WIIU || COMPILE_TEST
 	select REGMAP
 	help
 	  If you say yes here you will get support for the RTC subsystem
